Enabled server to send particle effects to players, centralized particle effects (ParticleCatalog), created randomness impact variable for SpreadEmitterParticles, added resource collection particles for production towers and when components are collected